// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Video /> by default matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dvpKKK k-Video k-Video--hasPointerCursor k-Video--objectFitCover"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="k-Video__buttonContainer"
  >
    <div
      className="k-Video__button"
    >
      <svg
        aria-hidden={true}
        className="k-Video__buttonPicto"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0l10 5-10 5z"
        />
      </svg>
    </div>
  </div>
  <video
    className="k-Video__videoElement"
    controls={false}
  />
</div>
`;

exports[`<Video /> with some props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa dvpKKK k-Video k-Video--hasPointerCursor k-Video--objectFitCover"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="sc-bwzfXH gSBjvA"
  >
    <div
      className="k-Loader"
    >
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
    </div>
  </div>
  <div
    className="k-Video__buttonContainer"
  >
    <div
      className="k-Video__button"
    >
      <svg
        aria-hidden={true}
        className="k-Video__buttonPicto"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0l10 5-10 5z"
        />
      </svg>
    </div>
  </div>
  <video
    autoPlay={false}
    className="k-Video__videoElement"
    controls={false}
    loop={true}
    muted={true}
    playsInline={true}
    poster="https://d3v4jsc54141g1.cloudfront.net/videos/maker/detailed_description_poster.jpg"
    src="https://d3v4jsc54141g1.cloudfront.net/videos/home/home_v2.mp4"
  />
</div>
`;
